Add iso+ and iso+_coe+ to prelude