@@ -202,49 +202,57 @@ public class NormalizeVisitor extends ExpressionTransformer<NormalizationMode>  
     return FunCallExpression.make(Prelude.MINUS, expr.getLevels(), newDefCallArgs);
   }
 
-  private Expression visitFunctionDefCall(LeveledDefCallExpression expr, NormalizationMode mode) {
+  private Expression normalizeCoe(LeveledDefCallExpression expr, NormalizationMode mode) {
     Definition definition = expr.getDefinition();
-    if (definition == Prelude.COERCE || definition == Prelude.COERCE2) {
-      LamExpression lamExpr = expr.getDefCallArguments().get(0).accept(this, NormalizationMode.WHNF).cast(LamExpression.class);
-      if (lamExpr != null) {
-        SingleDependentLink param = lamExpr.getParameters();
-        Expression body = param.getNext().hasNext() ? new LamExpression(param.getNext(), lamExpr.getBody()) : lamExpr.getBody();
-        body = body.accept(this, NormalizationMode.WHNF);
-        FunCallExpression funCall = body.cast(FunCallExpression.class);
-        boolean checkSigma = true;
+    if (definition != Prelude.COERCE && definition != Prelude.COERCE2 && definition != Prelude.COERCE_PLUS) {
+      return null;
+    }
 
-        if (funCall != null && funCall.getDefinition() == Prelude.ISO && definition == Prelude.COERCE) {
-          List<? extends Expression> isoArgs = funCall.getDefCallArguments();
-          ReferenceExpression refExpr = isoArgs.getLast().accept(this, NormalizationMode.WHNF).cast(ReferenceExpression.class);
-          if (refExpr != null && refExpr.getBinding() == param) {
-            checkSigma = false;
-            ConCallExpression normedPtCon = expr.getDefCallArguments().get(2).accept(this, NormalizationMode.WHNF).cast(ConCallExpression.class);
-            if (normedPtCon != null && normedPtCon.getDefinition() == Prelude.RIGHT) {
-              boolean noFreeVar = true;
-              for (int i = 0; i < isoArgs.size() - 1; i++) {
-                if (NormalizingFindBindingVisitor.findBinding(isoArgs.get(i), param)) {
-                  noFreeVar = false;
-                  break;
-                }
-              }
-              if (noFreeVar) {
-                return AppExpression.make(isoArgs.get(2), expr.getDefCallArguments().get(1), true).accept(this, mode);
-              }
-              /* Stricter version of iso
-              if (!NormalizingFindBindingVisitor.findBinding(isoArgs.get(0), param) && !NormalizingFindBindingVisitor.findBinding(isoArgs.get(1), param) && !NormalizingFindBindingVisitor.findBinding(isoArgs.get(2), param)) {
-                return AppExpression.make(isoArgs.get(2), expr.getDefCallArguments().get(1), true).accept(this, mode);
-              }
-              */
+    LamExpression lamExpr = expr.getDefCallArguments().getFirst().accept(this, NormalizationMode.WHNF).cast(LamExpression.class);
+    if (lamExpr == null) {
+      return null;
+    }
+
+    SingleDependentLink param = lamExpr.getParameters();
+    Expression body = param.getNext().hasNext() ? new LamExpression(param.getNext(), lamExpr.getBody()) : lamExpr.getBody().accept(this, NormalizationMode.WHNF);
+    FunCallExpression funCall = body.cast(FunCallExpression.class);
+    boolean checkSigma = definition != Prelude.COERCE_PLUS;
+
+    if (funCall != null && (funCall.getDefinition() == Prelude.ISO && definition == Prelude.COERCE || funCall.getDefinition() == Prelude.ISO_PLUS && definition == Prelude.COERCE_PLUS)) {
+      List<? extends Expression> isoArgs = funCall.getDefCallArguments();
+      ReferenceExpression refExpr = isoArgs.getLast().accept(this, NormalizationMode.WHNF).cast(ReferenceExpression.class);
+      if (refExpr != null && refExpr.getBinding() == param) {
+        checkSigma = false;
+        ConCallExpression normedPtCon = expr.getDefCallArguments().get(2).accept(this, NormalizationMode.WHNF).cast(ConCallExpression.class);
+        if (normedPtCon != null && (normedPtCon.getDefinition() == Prelude.RIGHT && definition == Prelude.COERCE || normedPtCon.getDefinition() == Prelude.DRIGHT && definition == Prelude.COERCE_PLUS)) {
+          boolean noFreeVar = true;
+          for (int i = 0; i < isoArgs.size() - 1; i++) {
+            if (NormalizingFindBindingVisitor.findBinding(isoArgs.get(i), param)) {
+              noFreeVar = false;
+              break;
             }
           }
-        }
-
-        if (checkSigma && !NormalizingFindBindingVisitor.findBinding(body, param)) {
-          return expr.getDefCallArguments().get(definition == Prelude.COERCE ? 1 : 2).accept(this, mode);
+          if (noFreeVar) {
+            return AppExpression.make(isoArgs.get(2), expr.getDefCallArguments().get(1), true).accept(this, mode);
+          }
         }
       }
     }
 
+    if (checkSigma && !NormalizingFindBindingVisitor.findBinding(body, param)) {
+      return expr.getDefCallArguments().get(definition == Prelude.COERCE2 ? 2 : 1).accept(this, mode);
+    }
+
+    return null;
+  }
+
+  private Expression visitFunctionDefCall(LeveledDefCallExpression expr, NormalizationMode mode) {
+    Expression coeResult = normalizeCoe(expr, mode);
+    if (coeResult != null) {
+      return coeResult;
+    }
+
+    Definition definition = expr.getDefinition();
     if (definition == Prelude.MINUS) {
       return normalizeMinus((FunCallExpression) expr, mode);
     }
